--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,6 +4,20 @@
   box-sizing: border-box;
   margin: 0;
   font-weight: normal;
+  font-family: 'Montserrat', sans-serif;
+}
+
+button {
+  padding: 0;
+}
+
+svg {
+  display: block;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 body {
