--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -8,7 +8,8 @@
   --button_color_hover: #2980b9;
   --border: #34495e20;
   --border_active: #34495e40;
-  --shadow: 0px 0px 0px 3px #ebedef;
+  --shadow: 0px 0px 0px 3px #34495e10;
+  --shadow_active: 0px 0px 0px 12px #34495e10;
 
   --lg_divider_space: 24px;
   --sm_divider_space: 16px;
